--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,20 @@ body {
 font-family: 'Inter', sans-serif;
 }
 
+.row{
+  display: flex;
+  margin: 5px auto;
+
+
+}
+  
+.col-9 {
+padding: 3px;
+}
+.col {
+  padding: 2px;
+}
+
 .buttons {
  text-align: right;
 }
@@ -80,7 +94,7 @@ form {
 
 
 #forecast-1 {
-  max-width: 500px;
+  max-width: 470px;
  margin: 0px auto;
  padding: 0px;
   
