--- a/src/style.css
+++ b/src/style.css
@@ -18,16 +18,15 @@ body {
   text-align: right;
 }
 
-ul {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-
 #city {
   font-size: 50px;
   margin: 0px;
   padding: 0px;
+}
+
+#update {
+  font-size: 10px;
+  
 }
 
 #date {
@@ -45,13 +44,15 @@ ul {
 }
 
 #units {
-  font-size: 20px;
+  font-size: 35px;
   position: relative;
-  bottom: 80px;
+  bottom: 70px;
 }
 
 ul {
+  list-style: none;
   margin: 0px;
+  padding: 0px;
 }
 
 #description {
@@ -60,7 +61,6 @@ ul {
 
 form {
   max-width: 500px;
-
   margin: 30px auto;
 }
 
@@ -68,6 +68,7 @@ form {
   max-width: 500px;
   max-height: 500px;
   margin: 5px auto;
+ 
 }
 
 .weather-app {
@@ -87,7 +88,7 @@ form {
   border: 1px solid #0168d9;
   border-radius: 7px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 #forecast-2 {
