--- a/src/style.css
+++ b/src/style.css
@@ -20,24 +20,27 @@ body {
 }
 
 #city {
-  font-size: 50px;
+  font-size: 60px;
+  font-weight: 550;
   margin-top: 10px;
   padding: 0px;
 }
 
 #update {
-  font-size: 10px;
+  font-size: 12px;
   
 }
 
 #date {
   font-size: 20px;
+  font-weight: 750;
   margin: 0px;
   padding: 0px;
 }
 
 #temperature {
-  font-size: 120px;
+  font-size: 110px;
+  font-weight: 700;
   display: inline;
   position: relative;
   bottom: 10px;
@@ -47,18 +50,38 @@ body {
 #units {
   font-size: 35px;
   position: relative;
-  bottom: 70px;
+  bottom: 66px;
+  right: -12px;
+}
+
+#icon {
+  position: relative;
+  bottom: -16px;
+  right: -93px;
+  
+
 }
 
 ul {
   list-style: none;
   margin: 0px;
   padding: 0px;
+
+}
+li:first-letter {
+  text-transform: capitalize;
+}
+
+.title-descript {
+  font-weight: 750;
 }
 
 #description {
   font-size: 20px;
+  font-style: italic;
 }
+
+
 
 form {
   max-width: 500px;
