--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,7 @@
-
-
 body {
   font-family: "Inter", sans-serif;
-background-color: black;
+  background-color: #ff99ef;
 }
-
 
 #search-bar {
   display: flex;
@@ -54,7 +51,6 @@ background-color: black;
   position: relative;
   bottom: 66px;
   right: -12px;
-  
 }
 
 .units .active {
@@ -69,7 +65,6 @@ background-color: black;
 #icon {
   position: relative;
   bottom: -35px;
-  
 }
 
 ul {
@@ -91,7 +86,7 @@ li:first-letter {
 }
 
 #weekday-temp-max {
-  color:black;
+  color: black;
   font-weight: bold;
 }
 
@@ -101,7 +96,6 @@ li:first-letter {
   font-weight: lighter;
 }
 
-
 #footer {
   color: white;
   padding: 20px;
@@ -110,12 +104,11 @@ li:first-letter {
 #search-form {
   max-width: 450px;
   margin: 5px auto;
-  
 }
 
 .weather-app-wrapper {
   margin: 5px auto;
-  max-width: 505px;
+  max-width: 500px;
 }
 
 #weather-app {
@@ -136,7 +129,7 @@ li:first-letter {
 }
 
 #contained-forecast {
- padding: 10px;
+  padding: 10px;
   margin: 4px;
   border: 1.5px solid black;
   border-radius: 7px;
@@ -144,5 +137,3 @@ li:first-letter {
   font-size: 18px;
   background-color: white;
 }
-
-
